--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/homes-app",
+            "outputPath": "dist/homes-app/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
